Colaboratory kullanılarak oluşturuldu

--- a/app.ipynb
+++ b/app.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrAMm+CcZpy1DfenRBRyfK",
+      "authorship_tag": "ABX9TyN9kOARnzIsjBo+XvYYkquF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "jU1KfFZc0qi2"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data = pd.read_csv(\"https://drive.google.com/uc?id=1zn_LJkIylZ5LX0YkZ_13v5l7LKSL_zqh\")\n",
+        "submission_sample = pd.read_csv(\"https://drive.google.com/uc?id=1Ck7DCmb_fvYTFIBT7JfGkZEEHM7l-TvQ\")\n"
+      ],
+      "metadata": {
+        "id": "yH8de2xc5tEK"
+      },
+      "execution_count": 12,
+      "outputs": []
     }
   ]
 }
